[package]
name = "transfer-solana-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.12"
borsh = "=0.9.1"
thiserror = "1.0"
arrayref = "0.3.6"

[lib]
crate-type = ["cdylib", "lib"]